--- a/paintme/android/app/src/main/AndroidManifest.xml
+++ b/paintme/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.paintme">
+    package="com.aocg.paintme">
    <application
         android:label="paintme"
         android:icon="@mipmap/ic_launcher">
