--- a/paintme/pubspec.yaml
+++ b/paintme/pubspec.yaml
@@ -27,12 +27,11 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  provider: ^5.0.0
+  flutter_bloc: ^7.0.0
+  shared_preferences: ^2.0.5
   intl: ^0.17.0
-  geolocator: ^7.0.3
-  permission_handler: ^6.1.3
-  http: ^0.13.1
+  firebase_core: ^1.0.4
+  cloud_firestore: ^1.0.6
 
 dev_dependencies:
   flutter_test:
@@ -87,3 +86,6 @@ flutter:
               weight: 300
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+module:
+  androidX: true
